<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android" >
    <Button
        android:id="@+id/ok_btn"
        style="@style/MyWidget.BigButton.Green"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginRight="8dp"
        android:singleLine="true"
        android:text="@string/common_ok"
        />
    <Button
        android:id="@+id/mid_btn"
        style="@style/MyWidget.BigButton.White"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginRight="8dp"
        android:singleLine="true"
        android:text="@string/common_apply"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/cancel_btn"
        style="@style/MyWidget.BigButton.White"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginRight="8dp"
        android:singleLine="true"
        android:text="@string/common_cancel"
        android:visibility="gone"
        />
</merge>

