<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:minHeight="48dp"
    android:orientation="horizontal"
    android:padding="10.0dip" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/common_white"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/new_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dip"
            android:background="@drawable/dx_new_bkg"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/common_new_function_tip"
            android:textColor="@color/common_white"
            android:textSize="12sp"
            android:visibility="gone" />
    </LinearLayout>

    <com.kelin.commonview.stylepreference.StyleToggleButton
        android:id="@+id/toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:textOff="@string/common_state_off"
        app:textOn="@string/common_state_on" />

    <TextView
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/common_white"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/list_item_arrow"
        android:visibility="gone" />

</LinearLayout>
